# TetrisRL

./: .gitignore  README.md  alg_config.toml  components.json  environment.yaml  package-lock.json  package.json  pyproject.toml  ruff.toml  vite.config.ts
src/: app.html  hooks.server.js
src/lib/: stores.js
src/lib/components/: Board.svelte  GameMode.svelte  GlobalHighScore.svelte  NextTetrominoDisplay.svelte  Score.svelte  Tile.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/api/keypress/: +server.ts
src/routes/api/mode/: +server.ts
src/routes/api/next_tetromino/: +server.ts
src/routes/api/render/: +server.ts
src/routes/api/statistics/level/: +server.ts
src/routes/api/statistics/lines_cleared/: +server.ts
src/routes/api/statistics/score/: +server.ts
tetris_frontend/: package-lock.json  package.json
tetris_frontend/src/: app.html
tetris_frontend/src/routes/: +page.svelte  +page.ts
tetris_frontend/static/css/: stylesheet.css
tetris_ppo/: tetris.py
tetris_rl/: __init__.py  engine.py  episode.py  main.py  playground.ipynb  server.py  tetris_board.tcss  tetromino.py
tetris_rl/env/: __init__.py  tetris_env.py  tetromino.py
