[tool.poetry]
name = "tetris_rl"
version = "0.1.0"
description = "A simple RL repository to play Tetris."
authors = ["Athena AIML"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
numpy = "^2.0.0"
rich = "^13.7.1"
gymnasium = "^0.29.1"
textual = "^0.70.0"
fastapi = "^0.111.0"
click = "^8.1.7"
requests = "^2.32.3"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

